namespace LocMp.Review.Domain.Enums;

public enum ReviewSubjectType
{
    Seller = 1,
    Product = 2,
    Courier = 3
}
