@startuml review-service
title <size:16><b>ReviewService</b></size>\n<color:#555>Диаграмма классов (schema: reviews)</color>

' ─── Глобальные настройки стиля ──────────────────────────────────────────────
skinparam defaultFontName "Segoe UI", Arial, sans-serif
skinparam defaultFontSize 13
skinparam roundcorner 10
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam nodesep 60
skinparam ranksep 70

skinparam class {
    BackgroundColor White
    HeaderBackgroundColor #FDEDEC
    BorderColor #C0392B
    BorderThickness 1.2
    ArrowColor #C0392B
    ArrowThickness 1.2
    AttributeFontColor #2C3E50
}

skinparam enum {
    BackgroundColor White
    HeaderBackgroundColor #FADBD8
    BorderColor #B71C1C
    BorderThickness 1.2
}

skinparam note {
    BackgroundColor #FFF9C4
    BorderColor #FBC02D
    FontColor #4E342E
    BorderThickness 1.2
    roundcorner 6
}

skinparam stereotypeCBackgroundColor #FADBD8
skinparam stereotypeABackgroundColor #FDEBD0
skinparam stereotypeEBackgroundColor #D5F5E3

' ─── Enums ───────────────────────────────────────────────────────────────────

enum ReviewSubjectType {
    Seller
    Product
    Courier
}

' ─── Review Aggregate ────────────────────────────────────────────────────────

class Review <<aggregate root>> {
    + Id : Guid <<PK>>
    ..привязка к заказу — обязательна..
    + OrderId : Guid <<logical ref: Orders, unique>>
    ..автор..
    + ReviewerId : Guid <<logical ref: Identity>>
    + ReviewerName : string <<snapshot>>
    ..объект оценки..
    + SubjectType : ReviewSubjectType
    + SubjectId : Guid <<logical ref: Identity/Catalog>>
    ..содержимое..
    + Rating : int <<1..5>>
    + Comment : string?
    + SubjectName : string? <<snapshot>>
    ..модерация..
    + IsVisible : bool
    + CreatedAt : DateTimeOffset
    + UpdatedAt : DateTimeOffset?
}

class ReviewPhoto {
    + Id : Guid <<PK>>
    + ReviewId : Guid <<FK>>
    + StorageUrl : string <<MinIO bucket: review-media>>
    + ObjectKey : string <<MinIO object key>>
    + MimeType : string
    + FileSize : long
    + SortOrder : int
    + UploadedAt : DateTimeOffset
}

class ReviewResponse {
    + Id : Guid <<PK>>
    + ReviewId : Guid <<FK, unique>>
    + AuthorId : Guid <<logical ref: Identity>>
    + Comment : string
    + CreatedAt : DateTimeOffset
    + UpdatedAt : DateTimeOffset?
}

' ─── AllowedReview (event projection) ───────────────────────────────────────

class AllowedReview <<event projection>> {
    + OrderId : Guid <<PK>>
    + BuyerId : Guid <<logical ref: Identity>>
    + SellerId : Guid <<logical ref: Identity>>
    + SellerName : string? <<snapshot>>
    + CourierId : Guid? <<logical ref: Identity>>
    + ProductIds : List<Guid> <<jsonb>>
    + ProductNames : Dictionary<Guid,string> <<jsonb, snapshot>>
    + AllowedAt : DateTimeOffset
}

' ─── Aggregated Read Model ───────────────────────────────────────────────────

class RatingAggregate <<read model>> {
    + SubjectId : Guid <<PK>>
    + SubjectType : ReviewSubjectType <<PK>>
    ..агрегированный рейтинг..
    + AverageRating : decimal
    + ReviewCount : int
    ..распределение оценок..
    + OneStar : int
    + TwoStar : int
    + ThreeStar : int
    + FourStar : int
    + FiveStar : int
    + LastCalculatedAt : DateTimeOffset
}

' ─── Relationships ────────────────────────────────────────────────────────────

Review "1" *-down- "0..*" ReviewPhoto : фото к отзыву >
Review "1" *-right- "0..1" ReviewResponse : ответ продавца >

AllowedReview .right.> Review : разрешает создание\n(проверяется по OrderId)

Review ..> ReviewSubjectType : тип субъекта
RatingAggregate ..> ReviewSubjectType : субъект агрегата

' ─── Notes ───────────────────────────────────────────────────────────────────

note right of Review
  OrderId — КЛЮЧЕВОЕ ограничение:
  отзыв только на завершённый заказ
  (OrderStatus = Completed).

  UNIQUE по OrderId: один заказ =
  максимум один отзыв от покупателя.
  Предотвращает накрутку рейтинга.

  SubjectId + SubjectType — полиморфная
  ссылка без FK в БД:
  Seller  → UserId продавца
  Product → ProductId
  Courier → UserId курьера
end note

note right of RatingAggregate
  Pre-computed агрегат.
  Пересчитывается в Consumer
  после каждого нового Review.

  Составной PK (SubjectId, SubjectType)
  позволяет хранить рейтинги
  Seller, Product и Courier в одной таблице.

  После пересчёта публикует:
  <<RatingAggregateUpdatedEvent>>
  → CatalogService обновляет SellerReadModel
end note

note right of ReviewResponse
  Продавец отвечает на отзыв один раз
  (UNIQUE по ReviewId).
  Модератор может скрыть ответ
  через IsVisible на уровне Review.
end note

note right of ReviewPhoto
  Хранится в schema: reviews.
  StorageUrl → MinIO bucket: review-media
  Путь: reviews/{reviewId}/{photoId}.jpg
end note

note bottom of AllowedReview
  Создаётся OrderCompletedConsumer
  при получении OrderCompletedEvent.

  Идемпотентна: если запись уже есть,
  Consumer пропускает создание.

  ProductNames и SellerName —
  снепшоты на момент завершения заказа.
  Используются в PendingReviewSubjectDto
  (GET /api/reviews/allowed),
  чтобы фронтенд не ходил в CatalogService.
end note


' ─── Сводная таблица сущностей ───────────────────────────────────────────────

legend bottom
  <b>Таблицы сервиса (schema: reviews)</b>
  |= Класс C# |= Таблица в БД |= Описание |
  | Review | Reviews | Отзыв покупателя — только на завершённый заказ (UNIQUE OrderId) |
  | ReviewPhoto | ReviewPhotos | Фото к отзыву (StorageUrl → MinIO bucket: review-media) |
  | ReviewResponse | ReviewResponses | Ответ продавца на отзыв (1:1, один раз) |
  | RatingAggregate | RatingAggregates | Pre-computed рейтинг: составной PK (SubjectId, SubjectType) |
  | AllowedReview | AllowedReviews | Проекция OrderCompletedEvent; разрешает покупателю оставить отзыв |
endlegend

@enduml
